2007-07-24  Thomas Wood  <thos@gnome.org>

	* data/Makefile.am: Add makefile

2007-07-24  Thomas Wood  <thos@gnome.org>

	* data: Add a data sub-directory for non-code items

2007-07-24  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_settings),
	(prepare_list), (style_init): improve color scheme matching; simplify
	code; don't possibly unref cursor thumbs twice; remove redundant color
	scheme initialization
	* appearance.glade: make theme details window modal to prevent the
	user from editing non-custom themes

2007-07-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init): bump all tooltips code to gtk
	2.11.6

2007-07-23  Matthias Clasen  <mclasen@redhat.com>

	* appearance-desktop.c: Use new GTK+ convenience API for
	icon view tooltips.  (#455985)

2007-07-12  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_load_stuffs), (desktop_init),
	(desktop_shutdown):
	* appearance-desktop.h:
	* appearance-main.c: (main):
	* appearance.h: add option to add wallpapers via the command line
	(closes bug #456337)

2007-07-08  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (cursor_size_scale_value_changed_cb): plug yet
	another leak

2007-07-08  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade: change the button order in themes tab.
	* appearance-style.c: add an icon to Customize button.

2007-07-08  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_view_tooltip_cb): fix leaks

2007-07-05  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init):
	* appearance.glade: ellipsize the "Save As" button

2007-07-05  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_string): don't allocate
	colors in the colormap
	(update_cursor_size_scale), (cursor_size_scale_value_changed_cb): don't
	crash if we have nothing but the default cursor theme

2007-07-05  Denis Washington  <denisw@svn.gnome.org>
