@@ -1,3 +1,9 @@
+2007-07-24  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-themes.c: (theme_load_from_gconf): when reading current
+	settings from gconf, get the color scheme from the gtk theme if necessary
+	to allow matching against themes retrieved via gnome-theme-info
+
 2007-07-24  Thomas Wood  <thos@gnome.org>
 
 	* data/Makefile.am: Add makefile
